--- a/models/dbt_project.yml
+++ b/models/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'northwind_project'
+name: 'my_project'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +36,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  northwind_project:
+    northwind:
+      +materialized: table
     # Applies to all files under models/staging/
     stading:
       +materialized: table
