--- a/models/northwind/staging_sources.yml
+++ b/models/northwind/staging_sources.yml
@@ -1,6 +1,19 @@
 version: 2
 sources:
 
+- name: weather_data
+  schema: s_annasalnikova
+  tables:
+    - name: weather_daily_raw
+    - name: weather_hourly_raw
+
+- name: flights_data
+  schema: public
+  tables:
+    - name: flights
+    - name: airports
+    - name: regions
+
 - name: northwind_data
   schema: northwind
   tables:
